--- a/01-前端开发基础/14-小米布局/css/mi.css
+++ b/01-前端开发基础/14-小米布局/css/mi.css
@@ -41,7 +41,6 @@
 .bottom .right {
   flex: 1;
   height: 614px;
-  background-color: skyblue;
 }
 
 .bottom .right ul {
@@ -57,7 +56,19 @@
   background-color: saddlebrown;
 }
 
-.bottom .right .item:nth-child(-n+4){
+.bottom .right .item:nth-child(1) {
+  margin-left: 14px;
+}
+
+.bottom .right .item:nth-child(5) {
+  margin-left: 14px;
+}
+
+.bottom .right .item:nth-child(-n+4) {
   margin-bottom: 14px;
 }
 
+.bottom .right .item:hover {
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.1);
+  transform: translate3d(0, -2px, 0);
+}
