--- a/01-前端开发基础/14-小米布局/css/mi.css
+++ b/01-前端开发基础/14-小米布局/css/mi.css
@@ -56,11 +56,7 @@
   background-color: saddlebrown;
 }
 
-.bottom .right .item:nth-child(1) {
-  margin-left: 14px;
-}
-
-.bottom .right .item:nth-child(5) {
+.bottom .right .item:nth-child(4n+1) {
   margin-left: 14px;
 }
 
