--- a/01-前端开发基础/14-小米布局/css/mi.css
+++ b/01-前端开发基础/14-小米布局/css/mi.css
@@ -53,7 +53,7 @@
 .bottom .right .item {
   width: 234px;
   height: 300px;
-  background-color: saddlebrown;
+  background-color: skyblue;
 }
 
 .bottom .right .item:nth-child(4n+1) {
