--- a/01-前端开发基础/15-网易云音乐/css/reset.css
+++ b/01-前端开发基础/15-网易云音乐/css/reset.css
@@ -7,25 +7,30 @@
  * <html style="--design-width: 1920" rem>
  * 开发 1rem = 设计 100px
  */
- :root {
+:root {
   --design-width: 750;
 }
+
 @media screen and (min-width: 600px) {
   :root {
     --design-width: 1920;
   }
 }
+
 html[rem] {
   font-size: calc(100 / var(--design-width) * 100vw);
 }
+
 /** REM布局 结束 **/
 * {
   -webkit-tap-highlight-color: transparent;
 }
+
 html {
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
 }
+
 /**
  * 重置body默认margin值.
  * 统一终端(windows,mac,linux)中文/英文字体.可在各个操作系统下都有最佳展示效果。
@@ -40,6 +45,12 @@ body {
   font-size: 16px;
   box-sizing: border-box;
 }
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
 /**
  * 重置"figure"标签
  * 规定独立的流内容（图像、图表、照片、代码等等）
@@ -47,13 +58,16 @@ body {
 figure {
   margin: 0px;
 }
+
 p {
   margin: 0px;
 }
+
 img,
 video {
   max-width: 100%;
 }
+
 /**
  * 重置h*标签的边距及加粗特性
  */
@@ -67,6 +81,7 @@ h6 {
   padding: 0;
   font-weight: normal;
 }
+
 /**
  * 重置列表ul,ol边距及符号
  */
@@ -76,6 +91,7 @@ ol {
   padding: 0;
   list-style: none;
 }
+
 /**
  * 重置表格单元格之间的间距
  */
@@ -83,10 +99,12 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 td,
 th {
   padding: 0;
 }
+
 /**
  * 1.重置表格单元格间距
  * 2.修改字体属性为继承
@@ -99,6 +117,7 @@ textarea {
   font-family: inherit;
   margin: 0;
 }
+
 /**
  * 功能：单行、多行文本的溢出显示省略号  
  * 添加`class="hidden1"`  1行溢出出现省略号
@@ -115,23 +134,29 @@ textarea {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+
 .hidden1 {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .hidden2 {
   -webkit-line-clamp: 2;
 }
+
 .hidden3 {
   -webkit-line-clamp: 3;
 }
+
 .hidden4 {
   -webkit-line-clamp: 4;
 }
+
 .hidden5 {
   -webkit-line-clamp: 5;
 }
+
 /**
  * 功能：清除浮动特性
  * 添加`class="clearfix"`
@@ -144,6 +169,7 @@ textarea {
   display: block;
   clear: both;
 }
+
 /**
  * 功能：灰度模式
  */
@@ -151,6 +177,7 @@ html.gray-model,
 html[gray-model] {
   filter: grayscale(100%);
 }
+
 /**
  * 功能：色弱模式
  */
