--- a/01-前端开发基础/15-网易云音乐/css/index.less
+++ b/01-前端开发基础/15-网易云音乐/css/index.less
@@ -9,27 +9,62 @@
     line-height: 70px;
 
     .left {
-     
+      display: flex;
+
       .logo {
         width: 176px;
         height: 69px;
         background: url(../images/topbar.png) no-repeat;
         background-position: 0 0;
-        background-color: pink;
 
         a {
           display: block;
           text-indent: -9999px
         }
       }
+
+      .list {
+        display: flex;
+
+        .item {
+          position: relative;
+          display: block;
+          padding: 0 20px;
+          color: #ccc;
+          font-size: 14px;
+
+          &:hover {
+            color: #fff;
+            background-color: #000;
+          }
+        }
+
+        .active {
+          color: #fff;
+          background-color: #000;
+
+          &::after {
+            content: '';
+            position: absolute;
+            width: 12px;
+            height: 7px;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            margin: 0 auto;
+            background: url(../images/topbar.png) no-repeat -226px 0;
+          }
+        }
+      }
+
+      .right {
+      }
     }
-
-    .right {}
   }
-}
 
-.header-wrapper {
-  width: 1100px;
-  // background-color: pink;
-  margin: 0 auto;
+  .header-wrapper {
+    width: 1100px;
+    // background-color: pink;
+    margin: 0 auto;
+  }
 }
