--- a/01-前端开发基础/15-网易云音乐/css/index.css
+++ b/01-前端开发基础/15-网易云音乐/css/index.css
@@ -14,8 +14,7 @@
 .header .top-bar .left .logo {
   width: 176px;
   height: 69px;
-  background: url(../images/topbar.png) no-repeat;
-  background-position: 0 0;
+  background: url(../images/topbar.png) no-repeat 0 0;
 }
 .header .top-bar .left .logo a {
   display: block;
@@ -49,6 +48,15 @@
   right: 0;
   margin: 0 auto;
   background: url(../images/topbar.png) no-repeat -226px 0;
+}
+.header .top-bar .left .list .download::after {
+  content: '';
+  position: absolute;
+  width: 28px;
+  height: 19px;
+  top: 21px;
+  left: 100px;
+  background: url(../images/topbar.png) no-repeat -190px 0;
 }
 .header .header-wrapper {
   width: 1100px;
