: 网易云音乐

--- a/01-前端开发基础/15-网易云音乐/css/index.less
+++ b/01-前端开发基础/15-网易云音乐/css/index.less
@@ -62,7 +62,7 @@
           height: 19px;
           top: 21px;
           left: 100px;
-          background: url(../images/topbar.png) no-repeat -190px 0
+          background: url(../images/topbar.png) no-repeat -190px 0;
         }
       }
 
