--- a/01-前端开发基础/15-网易云音乐/css/reset.less
+++ b/01-前端开发基础/15-网易云音乐/css/reset.less
@@ -2,11 +2,11 @@
   margin: 0;
   padding: 0;
 }
-ul,
-li {
+
+ul, li {
   list-style: none;
 }
+
 a {
   text-decoration: none;
 }
-/*# sourceMappingURL=reset.css.map */
