--- a/01-前端开发基础/15-网易云音乐/css/reset.less
+++ b/01-前端开发基础/15-网易云音乐/css/reset.less
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 ul, li {
@@ -9,4 +10,5 @@ ul, li {
 
 a {
   text-decoration: none;
+  color: #000;
 }
