--- a/01-前端开发基础/15-网易云音乐/css/index.less
+++ b/01-前端开发基础/15-网易云音乐/css/index.less
@@ -11,16 +11,14 @@
       justify-content: space-between;
       margin: 0 auto;
       width: 1100px;
-      height: 69px;
       line-height: 69px;
 
       background-color: pink;
 
       .left {
-        h2 {
+        .logo {
           width: 177px;
           height: 69px;
-          line-height: 69px;
 
           a {
             display: block;
