--- a/01-前端开发基础/15-网易云音乐/css/index.css
+++ b/01-前端开发基础/15-网易云音乐/css/index.css
@@ -12,7 +12,9 @@
   margin: 0 auto;
   width: 1100px;
   line-height: 69px;
-  background-color: pink;
+}
+.header .top-bar .wrapper .left {
+  display: flex;
 }
 .header .top-bar .wrapper .left .logo {
   width: 177px;
@@ -23,9 +25,60 @@
   background: url("../images/topbar.png") no-repeat 0 0;
   text-indent: -9999px;
 }
+.header .top-bar .wrapper .left .list {
+  display: flex;
+}
+.header .top-bar .wrapper .left .list .item {
+  position: relative;
+  padding: 0 19px;
+  display: block;
+  color: #ccc;
+  font-size: 14px;
+}
+.header .top-bar .wrapper .left .list .item:hover {
+  color: #fff;
+  background-color: #000;
+}
+.header .top-bar .wrapper .left .list .active {
+  color: #fff;
+  background-color: #000;
+}
+.header .top-bar .wrapper .left .list .active::after {
+  position: absolute;
+  content: '';
+  width: 12px;
+  height: 7px;
+  background: url("../images/topbar.png") no-repeat -226px 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
+}
+.header .top-bar .wrapper .left .list .download::after {
+  position: absolute;
+  content: '';
+  width: 28px;
+  height: 19px;
+  background: url("../images/topbar.png") no-repeat -190px 0;
+  top: 21px;
+  left: 100px;
+}
 .header .top-nav {
   height: 35px;
+  line-height: 35px;
   background-color: #C20C0C;
   border-bottom: 1px solid #a40011;
+  color: #fff;
+}
+.header .top-nav .wrapper {
+  margin: 0 auto;
+  width: 1100px;
+}
+.header .top-nav .wrapper .list {
+  display: flex;
+}
+.header .top-nav .wrapper .list a {
+  font-size: 12px;
+  color: #fff;
 }
 /*# sourceMappingURL=index.css.map */
