--- a/01-前端开发基础/15-网易云音乐/css/index.less
+++ b/01-前端开发基础/15-网易云音乐/css/index.less
@@ -13,9 +13,9 @@
       width: 1100px;
       line-height: 69px;
 
-      background-color: pink;
-
       .left {
+        display: flex;
+
         .logo {
           width: 177px;
           height: 69px;
@@ -27,19 +27,78 @@
           }
         }
 
+        .list {
+          display: flex;
 
+          .item {
+            position: relative;
+            padding: 0 19px;
+            display: block;
+            color: #ccc;
+            font-size: 14px;
+
+            &:hover {
+              color: #fff;
+              background-color: #000;
+            }
+          }
+
+          .active {
+            color: #fff;
+            background-color: #000;
+
+            &::after {
+              position: absolute;
+              content: '';
+              width: 12px;
+              height: 7px;
+              background: url("../images/topbar.png") no-repeat -226px 0;
+              left: 0;
+              right: 0;
+              bottom: 0;
+              margin: 0 auto;
+            }
+          }
+
+          .download {
+            &::after {
+              position: absolute;
+              content: '';
+              width: 28px;
+              height: 19px;
+              background: url("../images/topbar.png") no-repeat -190px 0;
+              top: 21px;
+              left: 100px;
+            }
+          }
+        }
       }
 
       .right {
 
       }
-
     }
   }
 
   .top-nav {
     height: 35px;
+    line-height: 35px;
     background-color: #C20C0C;
     border-bottom: 1px solid #a40011;
+    color: #fff;
+
+    .wrapper {
+      margin: 0 auto;
+      width: 1100px;
+
+      .list {
+        display: flex;
+
+        a {
+          font-size: 12px;
+          color: #fff;
+        }
+      }
+    }
   }
 }
