--- a/01-前端开发基础/15-网易云音乐/css/index.css
+++ b/01-前端开发基础/15-网易云音乐/css/index.css
@@ -63,6 +63,49 @@
   top: 21px;
   left: 100px;
 }
+.header .top-bar .wrapper .right {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  color: #787878;
+}
+.header .top-bar .wrapper .right .search {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 158px;
+  height: 32px;
+  padding-right: 10px;
+  border-radius: 32px;
+  background: #fff url("../images/topbar.png") 0 -99px no-repeat;
+}
+.header .top-bar .wrapper .right .search input {
+  width: 118px;
+}
+.header .top-bar .wrapper .right .search input::placeholder {
+  color: #9b9b9b;
+  font-size: 12px;
+}
+.header .top-bar .wrapper .right .author {
+  margin: 0 20px;
+}
+.header .top-bar .wrapper .right .author a {
+  display: inline-block;
+  width: 90px;
+  height: 32px;
+  line-height: 32px;
+  color: #ccc;
+  border: 1px solid #4F4F4F;
+  border-radius: 20px;
+  text-align: center;
+}
+.header .top-bar .wrapper .right .author a:hover {
+  border: 1px solid #fff;
+  color: #fff;
+}
+.header .top-bar .wrapper .right .login a {
+  color: #787878;
+}
 .header .top-nav {
   height: 35px;
   line-height: 35px;
