--- a/01-前端开发基础/15-网易云音乐/css/index.less
+++ b/01-前端开发基础/15-网易云音乐/css/index.less
@@ -75,7 +75,56 @@
       }
 
       .right {
+        display: flex;
+        align-items: center;
+        font-size: 12px;
+        color: #787878;
 
+        .search {
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          width: 158px;
+          height: 32px;
+          padding-right: 10px;
+          border-radius: 32px;
+          background: #fff url("../images/topbar.png") 0 -99px no-repeat;
+
+          input {
+            width: 118px;
+          }
+
+          input::placeholder {
+            color: #9b9b9b;
+            font-size: 12px;
+          }
+        }
+
+        .author {
+          margin: 0 20px;
+
+          a {
+            display: inline-block;
+            width: 90px;
+            height: 32px;
+            line-height: 32px;
+            color: #ccc;
+            border: 1px solid #4F4F4F;
+            border-radius: 20px;
+            text-align: center;
+
+            &:hover {
+              border: 1px solid #fff;
+              color: #fff;
+            }
+          }
+        }
+
+        .login {
+          a {
+            color: #787878;
+          }
+        }
       }
     }
   }
