--- a/01-前端开发基础/15-网易云音乐/css/reset.css
+++ b/01-前端开发基础/15-网易云音乐/css/reset.css
@@ -16,5 +16,10 @@ li {
 a {
   text-decoration: none;
   color: #000;
+  outline: none;
+}
+input {
+  outline: none;
+  border: none;
 }
 /*# sourceMappingURL=reset.css.map */
