--- a/01-前端开发基础/15-网易云音乐/css/index.css
+++ b/01-前端开发基础/15-网易云音乐/css/index.css
@@ -106,6 +106,9 @@
 .header .top-bar .wrapper .right .login a {
   color: #787878;
 }
+.header .top-bar .wrapper .right .login a:hover {
+  color: #fff;
+}
 .header .top-nav {
   height: 35px;
   line-height: 35px;
@@ -118,10 +121,20 @@
   width: 1100px;
 }
 .header .top-nav .wrapper .list {
+  padding-left: 180px;
   display: flex;
 }
-.header .top-nav .wrapper .list a {
+.header .top-nav .wrapper .list .item {
   font-size: 12px;
   color: #fff;
+  padding: 0 13px;
+  margin: 0 17px;
+  border-radius: 20px;
+}
+.header .top-nav .wrapper .list .item:hover {
+  background-color: #9B0909;
+}
+.header .top-nav .wrapper .list .active {
+  background-color: #9B0909;
 }
 /*# sourceMappingURL=index.css.map */
