--- a/01-前端开发基础/15-网易云音乐/css/index.less
+++ b/01-前端开发基础/15-网易云音乐/css/index.less
@@ -123,6 +123,10 @@
         .login {
           a {
             color: #787878;
+
+            &:hover {
+              color: #fff;
+            }
           }
         }
       }
@@ -141,11 +145,23 @@
       width: 1100px;
 
       .list {
+        padding-left: 180px;
         display: flex;
 
-        a {
+        .item {
           font-size: 12px;
           color: #fff;
+          padding: 0 13px;
+          margin: 0 17px;
+          border-radius: 20px;
+
+          &:hover {
+            background-color: #9B0909;
+          }
+        }
+
+        .active {
+          background-color: #9B0909;
         }
       }
     }
