--- a/01-前端开发基础/15-网易云音乐/css/index.less
+++ b/01-前端开发基础/15-网易云音乐/css/index.less
@@ -1,6 +1,4 @@
 .header {
-  width: 1903px;
-
   .top-bar {
     height: 70px;
     background: #242424;
@@ -166,4 +164,10 @@
       }
     }
   }
+}
+
+
+.banner {
+  height: 285px;
+  background-color: pink;
 }
