--- a/01-前端开发基础/15-网易云音乐/css/index.less
+++ b/01-前端开发基础/15-网易云音乐/css/index.less
@@ -168,5 +168,36 @@
 
 .banner {
   height: 285px;
-  background-color: pink;
+  background: url("../images/banner-bg.jpg") no-repeat center center;
+  background-size: 6000px;
+
+  .wrapper {
+    display: flex;
+    width: 982px;
+    height: 285px;
+    margin: 0 auto;
+    background-color: pink;
+
+    .left {
+      .list {
+        display: flex;
+        width: 730px;
+        overflow: hidden;
+
+        li {
+          flex-shrink: 0;
+          width: 100%;
+        }
+
+        .item {
+          display: block;
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+    }
+  }
 }
