--- a/01-前端开发基础/15-网易云音乐/css/reset.css
+++ b/01-前端开发基础/15-网易云音乐/css/reset.css
@@ -22,4 +22,11 @@ input {
   outline: none;
   border: none;
 }
+body {
+  width: 1903px;
+  overflow-y: scroll;
+}
+img {
+  vertical-align: top;
+}
 /*# sourceMappingURL=reset.css.map */
