--- a/01-前端开发基础/15-网易云音乐/css/reset.less
+++ b/01-前端开发基础/15-网易云音乐/css/reset.less
@@ -23,3 +23,12 @@ input {
   outline: none;
   border: none;
 }
+
+body {
+  width: 1903px;
+  overflow-y: scroll;
+}
+
+img {
+  vertical-align: top;
+}
