--- a/01-前端开发基础/09-京东/css/index.css
+++ b/01-前端开发基础/09-京东/css/index.css
@@ -50,6 +50,38 @@
   border-right: 1px solid #666;
 }
 .top-bar .nav ul li:last-child a {
-  border-right: 0;
+  padding-right: 0;
+  border: 0;
+}
+/* 头部 */
+.header {
+  height: 120px;
+  background-color: pink;
+}
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header .container .logo {
+  height: 120px;
+}
+.header .container .search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header .container .search input {
+  width: 510px;
+  height: 36px;
+  border: 1px solid #DD302D;
+}
+.header .container .search a {
+  width: 80px;
+  height: 36px;
+  text-align: center;
+  line-height: 36px;
+  font-size: 0;
+  background: url(../assets/serch_icon.png) no-repeat center #DD302D;
 }
 /*# sourceMappingURL=index.css.map */
