--- a/01-前端开发基础/09-京东/css/index.css
+++ b/01-前端开发基础/09-京东/css/index.css
@@ -81,4 +81,131 @@
   font-size: 0;
   background: url(../assets/serch_icon.png) no-repeat center #DD302D;
 }
+/* 主导航区 */
+.main-nav {
+  height: 48px;
+  border-bottom: 1px solid #DD302D;
+}
+.main-nav .container {
+  display: flex;
+}
+.main-nav .container .all-types {
+  width: 190px;
+  height: 48px;
+  text-align: center;
+  line-height: 48px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #DD302D;
+}
+.main-nav .container .nav-list {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+}
+.main-nav .container .nav-list li {
+  padding: 0 10px;
+}
+.main-nav .container .nav-list li a {
+  color: #333;
+}
+/* 主内容区 */
+.main-content {
+  height: 458px;
+  margin: 10px 0;
+}
+.main-content .container {
+  display: flex;
+  /* 侧边导航 */
+}
+.main-content .container .side-nav {
+  position: relative;
+  width: 190px;
+  height: 458px;
+  background-color: #f4f4f4;
+  /* 二级菜单 */
+}
+.main-content .container .side-nav li {
+  font-size: 14px;
+  height: 28px;
+  line-height: 28px;
+  padding-left: 16px;
+}
+.main-content .container .side-nav li:hover {
+  background-color: #DD302D;
+}
+.main-content .container .side-nav li:hover .second-menu {
+  display: block;
+}
+.main-content .container .side-nav li:hover > a {
+  color: #fff;
+}
+.main-content .container .side-nav .second-menu {
+  display: none;
+  position: absolute;
+  left: 190px;
+  top: 0;
+  width: 700px;
+  height: 458px;
+  background-color: #f4f4f4;
+  padding-left: 20px;
+  padding-top: 8px;
+}
+.main-content .container .side-nav .second-menu dl {
+  display: flex;
+  height: 36px;
+  line-height: 36px;
+}
+.main-content .container .side-nav .second-menu dl:first-child {
+  margin-top: 10px;
+}
+.main-content .container .side-nav .second-menu dl dt {
+  width: 70px;
+  margin-right: 10px;
+  font-weight: bold;
+}
+.main-content .container .side-nav .second-menu dl dd a {
+  margin-top: 8px;
+  padding: 0 10px;
+  border-left: 1px solid #333;
+}
+.main-content .container .banner {
+  width: 690px;
+  height: 458px;
+  margin: 0 10px;
+}
+.main-content .container .side-other {
+  width: 290px;
+  height: 458px;
+}
+.main-content .container .side-other .express {
+  width: 290px;
+  height: 158px;
+  padding: 0 14px;
+  border: 1px solid #d9d9d9;
+}
+.main-content .container .side-other .express .title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 39px;
+  border-bottom: 1px solid #D9D9D9;
+}
+.main-content .container .side-other .express .title h3 {
+  font-size: 14px;
+}
+.main-content .container .side-other .express .title .more {
+  font-size: 12px;
+  color: #999;
+}
+.main-content .container .side-other .express .info li {
+  height: 26px;
+  line-height: 28px;
+  color: #666;
+}
+.main-content .container .side-other .other-nav {
+  width: 290px;
+  height: 290px;
+  background: url("../assets/精灵图-侧边功能.png") no-repeat;
+}
 /*# sourceMappingURL=index.css.map */
