--- a/01-前端开发基础/09-京东/css/index.css
+++ b/01-前端开发基础/09-京东/css/index.css
@@ -204,8 +204,38 @@
   color: #666;
 }
 .main-content .container .side-other .other-nav {
+  margin-top: 10px;
   width: 290px;
   height: 290px;
+}
+.main-content .container .side-other .other-nav ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+.main-content .container .side-other .other-nav ul li {
+  width: 48px;
+  height: 70px;
+  margin: 11px;
+  text-align: center;
+}
+.main-content .container .side-other .other-nav ul li i {
+  display: block;
+  width: 48px;
+  height: 48px;
+  font-style: normal;
   background: url("../assets/精灵图-侧边功能.png") no-repeat;
+}
+.main-content .container .side-other .other-nav ul li p {
+  line-height: 22px;
+  font-size: 14px;
+}
+.main-content .container .side-other .other-nav ul li:nth-child(2) i {
+  background-position: -50px 0;
+}
+.main-content .container .side-other .other-nav ul li:nth-child(3) i {
+  background-position: -100px 0;
+}
+.main-content .container .side-other .other-nav ul li:nth-child(4) i {
+  background-position: -148px 0;
 }
 /*# sourceMappingURL=index.css.map */
