--- a/01-前端开发基础/09-京东/css/index.less
+++ b/01-前端开发基础/09-京东/css/index.less
@@ -292,13 +292,13 @@
 
             &:nth-child(3) {
               i {
-                background-position: -96px 0;
+                background-position: -(48*2)px 0;
               }
             }
 
             &:nth-child(4) {
               i {
-                background-position: -144px 0;
+                background-position: -(48*3)px 0;
               }
             }
           }
