--- a/01-前端开发基础/09-京东/css/index.less
+++ b/01-前端开发基础/09-京东/css/index.less
@@ -271,7 +271,7 @@
             margin: 11px;
             text-align: center;
 
-            i {
+            .pic {
               display: block;
               width: 48px;
               height: 48px;
@@ -285,19 +285,19 @@
             }
 
             &:nth-child(2) {
-              i {
+              .pic {
                 background-position: -48px 0;
               }
             }
 
             &:nth-child(3) {
-              i {
+              .pic {
                 background-position: -(48*2)px 0;
               }
             }
 
             &:nth-child(4) {
-              i {
+              .pic {
                 background-position: -(48*3)px 0;
               }
             }
