--- a/01-前端开发基础/09-京东/css/index.less
+++ b/01-前端开发基础/09-京东/css/index.less
@@ -308,3 +308,20 @@
   }
 
 }
+
+/* 秒杀 */
+.sec-kill {
+  margin-bottom: 10px;
+
+  .container {
+    display: flex;
+
+    img {
+      margin-right: 10px;
+
+      &:last-child {
+        margin: 0;
+      }
+    }
+  }
+}
