--- a/01-前端开发基础/09-京东/css/index.less
+++ b/01-前端开发基础/09-京东/css/index.less
@@ -311,13 +311,13 @@
 
 /* 秒杀 */
 .sec-kill {
-  margin-bottom: 10px;
+  margin-bottom: 48px;
 
   .container {
     display: flex;
+    justify-content: space-between;
 
     img {
-      margin-right: 10px;
 
       &:last-child {
         margin: 0;
