--- a/01-前端开发基础/09-京东/css/index.less
+++ b/01-前端开发基础/09-京东/css/index.less
@@ -328,7 +328,7 @@
 
 /* 楼层 */
 .floor {
-  background-color: pink;
+  margin-bottom: 48px;
 
   .container {
 
@@ -337,9 +337,10 @@
       justify-content: space-between;
       align-items: center;
       height: 30px;
-      margin-bottom: 4px;
+      padding-bottom: 4px;
+      border-bottom: 2px solid #DD302D;
 
-      .floor-name {
+      .floor-title {
         font-size: 20px;
       }
 
@@ -349,6 +350,7 @@
         li {
           padding: 0 10px;
           border-right: 1px solid #666;
+          font-size: 14px;
 
           &:last-child {
             padding-right: 0;
@@ -358,6 +360,142 @@
       }
     }
 
+    .floor-info {
+      display: flex;
+
+      .item {
+        background-color: skyblue;
+      }
+
+      .item1 {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 230px;
+        height: 432px;
+        background-color: #F4F4F4;
+        padding: 20px;
+
+        ul {
+          display: flex;
+          flex-wrap: wrap;
+
+          li {
+            text-align: center;
+            margin-bottom: 14.4px;
+            width: 90px;
+            height: 22px;
+            padding-bottom: 3.5px;
+            border-bottom: 1px solid #666;
+
+            &:nth-child(2n+1) {
+              margin-right: 10px;
+            }
+          }
+        }
+      }
+
+      .item2 {
+        width: 340px;
+        height: 432px;
+      }
+
+      .item3 {
+        width: 206px;
+        height: 432px;
+        border-right: 1px solid #E2E2E2;
+
+        img {
+          border-bottom: 1px solid #E2E2E2;
+        }
+      }
+
+      .item4 {
+        width: 206px;
+        height: 432px;
+        border-right: 1px solid #E2E2E2;
+
+        img {
+          border: 1px solid #E2E2E2;
+        }
+      }
+
+      .item5 {
+        width: 206px;
+        height: 432px;
+        border-right: 1px solid #E2E2E2;
+
+        img {
+          border: 1px solid #E2E2E2;
+        }
+      }
+    }
+  }
+}
+
+/* 页脚 */
+.footer {
+  height: 440px;
+  background-color: #483E3E;
+
+  .container {
+
+    /* 顶部链接 */
+
+    .top-links {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 48px;
+      padding-bottom: 22px;
+
+      .links-list {
+        width: 190px;
+        height: 176px;
+        font-size: 14px;
+
+        a {
+          color: #fff;
+        }
+      }
+    }
+
+    .line {
+      border: 1px solid #584D4D;
+    }
+
+    .bottom-links {
+      font-size: 12px;
+      color: #fff;
+      height: 142px;
+
+      .bottom-links-list {
+        display: flex;
+        justify-content: center;
+        margin-top: 47px;
+        margin-bottom: 10px;
+        font-size: 12px;
+
+        li {
+          padding: 0 26px;
+          border-right: 1px solid #fff;
+
+          &:last-child {
+            border: 0;
+          }
+
+          a {
+            font-size: 12px;
+            color: #fff;
+          }
+        }
+      }
+      .copyright {
+        text-align: center;
+      }
+    }
+
 
   }
+
 }
