--- a/01-前端开发基础/09-京东/css/index.less
+++ b/01-前端开发基础/09-京东/css/index.less
@@ -452,9 +452,10 @@
       .links-list {
         width: 190px;
         height: 176px;
-        font-size: 14px;
 
         a {
+          font-size: 14px;
+          line-height: 24px;
           color: #fff;
         }
       }
@@ -490,6 +491,7 @@
           }
         }
       }
+
       .copyright {
         text-align: center;
       }
