--- a/01-前端开发基础/09-京东/css/index.css
+++ b/01-前端开发基础/09-京东/css/index.css
@@ -352,9 +352,10 @@
 .footer .container .top-links .links-list {
   width: 190px;
   height: 176px;
-  font-size: 14px;
 }
 .footer .container .top-links .links-list a {
+  font-size: 14px;
+  line-height: 24px;
   color: #fff;
 }
 .footer .container .line {
