--- a/01-前端开发基础/案例/京东首页/css/index.less
+++ b/01-前端开发基础/案例/京东首页/css/index.less
@@ -9,7 +9,7 @@
   position: sticky;
   top: 0;
   z-index: 999;
-  
+
   height: 30px;
   background-color: #ECECEC;
 
@@ -102,7 +102,7 @@
         width: 80px;
         height: 36px;
         font-size: 0;
-        background: url(../assets/serch_icon.png) no-repeat center #DD302D;
+        background: url(serch_icon.png) no-repeat center #DD302D;
       }
     }
   }
@@ -280,7 +280,7 @@
               width: 48px;
               height: 48px;
               font-style: normal;
-              background: url("../assets/精灵图-侧边功能.png") no-repeat;
+              background: url("assetspng") no-repeat;
             }
 
             p {
