--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -75,7 +75,7 @@
         input {
           color: #333;
           line-height: 32px;
-          text-indent: 30px;
+          text-indent: 2em;
           background-color: transparent;
         }
       }
