--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
@@ -72,6 +72,7 @@
 .top-bar .container .top-bar-nav .login-nav {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .top-bar .container .top-bar-nav .login-nav a {
   color: #ccc;
