--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -83,6 +83,7 @@
       .login-nav {
         display: flex;
         align-items: center;
+        justify-content: space-between;
 
         a {
           color: #ccc;
