--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
@@ -14,18 +14,17 @@
 .top-bar .container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
   height: 100%;
+  line-height: 69px;
 }
 .top-bar .container h1 {
   width: 176px;
-  height: 69px;
   background: url("../assets/topbar.png") no-repeat;
 }
 .top-bar .container h1 a {
   display: block;
   width: 100%;
-  height: 100%;
   font-size: 0;
 }
 .top-bar .container .top-links {
@@ -52,6 +51,7 @@
   position: relative;
   width: 158px;
   height: 32px;
+  line-height: 32px;
   border-radius: 16px;
   background-color: #fff;
 }
@@ -64,7 +64,11 @@
   background: url("../assets/topbar.png") no-repeat -10px -108px;
 }
 .top-bar .container .top-bar-nav .search input {
+  position: absolute;
+  top: 0;
+  left: 0;
   color: #333;
+  height: 32px;
   line-height: 32px;
   text-indent: 2em;
   background-color: transparent;
