--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -16,18 +16,17 @@
   .container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     height: 100%;
+    line-height: 69px;
 
     h1 {
       width: 176px;
-      height: 69px;
       background: url("../assets/topbar.png") no-repeat;
 
       a {
         display: block;
         width: 100%;
-        height: 100%;
         font-size: 0;
       }
     }
@@ -60,6 +59,7 @@
         position: relative;
         width: 158px;
         height: 32px;
+        line-height: 32px;
         border-radius: 16px;
         background-color: #fff;
 
@@ -73,7 +73,11 @@
         }
 
         input {
+          position: absolute;
+          top: 0;
+          left: 0;
           color: #333;
+          height: 32px;
           line-height: 32px;
           text-indent: 2em;
           background-color: transparent;
