--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -34,10 +34,9 @@
     .top-links {
       display: flex;
 
-      a {
+      .item {
+        position: relative;
         display: block;
-        height: 69px;
-        line-height: 69px;
         padding: 0 19px;
         font-size: 14px;
         color: #ccc;
@@ -45,6 +44,23 @@
         &:hover {
           background-color: #000;
           color: #fff;
+        }
+      }
+
+      .active {
+        background-color: #000;
+        color: #fff;
+
+        &::after {
+          position: absolute;
+          content: '';
+          width: 12px;
+          height: 7px;
+          background: url("../assets/topbar.png") -226px 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          margin: 0 auto;
         }
       }
 
