--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -59,7 +59,7 @@
           background: url("../assets/topbar.png") -226px 0;
           left: 0;
           right: 0;
-          bottom: 0;
+          bottom: -1px;
           margin: 0 auto;
         }
       }
