--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -47,6 +47,7 @@
         }
       }
 
+
       .active {
         background-color: #000;
         color: #fff;
@@ -64,6 +65,17 @@
         }
       }
 
+      .hot {
+        &::after {
+          position: absolute;
+          content: '';
+          width: 26px;
+          height: 13px;
+          background: url("../assets/topbar.png") -192px 0;
+          top: 16px;
+          right: -10px;
+        }
+      }
     }
 
     .top-bar-nav {
