--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -136,6 +136,44 @@
           }
         }
       }
+    }
+  }
+}
+
+.nav {
+  height: 35px;
+  background-color: #C20C0C;
+  border-bottom: 1px solid #a40011;
+
+  .container {
+    ul {
+      display: flex;
+      line-height: 35px;
+
+      li {
+        &:first-child {
+          margin-left: 202px;
+        }
+
+        .item {
+          display: block;
+          height: 20px;
+          line-height: 20px;
+          text-align: center;
+          margin: 7px 17px 0;
+          padding: 0 13px;
+          border-radius: 20px;
+          color: #fff;
+
+          &:hover {
+            background-color: #9b0909;
+          }
+        }
+
+        .active {
+          background-color: #9b0909;
+        }
+      }
 
     }
   }
