--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -141,19 +141,16 @@
 
 .top-nav {
   height: 35px;
+  line-height: 35px;
   background-color: #C20C0C;
   border-bottom: 1px solid #a40011;
 
   .container {
     ul {
       display: flex;
-      line-height: 35px;
+      padding-left: 202px;
 
       li {
-        &:first-child {
-          margin-left: 202px;
-        }
-
         .item {
           display: block;
           height: 20px;
