--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
@@ -143,4 +143,43 @@
 .top-nav .container ul li .active {
   background-color: #9b0909;
 }
+.banner {
+  height: 285px;
+  background-color: pink;
+}
+.banner .sub-container .left {
+  position: relative;
+  display: flex;
+  width: 730px;
+  overflow: hidden;
+}
+.banner .sub-container .left img {
+  display: block;
+  width: 730px;
+}
+.banner .sub-container .left .dotted {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 210px;
+  height: 20px;
+}
+.banner .sub-container .left .dotted .item {
+  display: block;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+.banner .sub-container .left .dotted .item:hover {
+  background-color: #cb0c0c;
+}
+.banner .sub-container .left .dotted .active {
+  background-color: #cb0c0c;
+}
 /*# sourceMappingURL=index.css.map */
