--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -190,9 +190,14 @@
       .banner-img-list {
         display: flex;
 
-        img {
+        a {
           display: block;
           width: 730px;
+
+          img {
+            display: block;
+            width: 100%;
+          }
         }
       }
 
