--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.css
@@ -158,9 +158,13 @@
 .banner .sub-container .banner-img .banner-img-list {
   display: flex;
 }
-.banner .sub-container .banner-img .banner-img-list img {
+.banner .sub-container .banner-img .banner-img-list a {
   display: block;
   width: 730px;
+}
+.banner .sub-container .banner-img .banner-img-list a img {
+  display: block;
+  width: 100%;
 }
 .banner .sub-container .banner-img .dotted {
   position: absolute;
