--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -196,7 +196,7 @@
 
           img {
             display: block;
-            width: 100%;
+            width: 730px;
           }
         }
       }
