--- a/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
+++ b/01-前端开发基础/案例练习/02_网易云音乐/css/index.less
@@ -391,6 +391,29 @@
       width: 255px;
       border: 1px solid #d3d3d3;
       border-left: 0;
+
+
+      .user-login {
+        width: 250px;
+        height: 126px;
+        background-image: linear-gradient(#fdfdfd, #e2e2e2);
+
+        p {
+          margin: 15px;
+        }
+
+        .login-btn {
+          display: block;
+          width: 100px;
+          height: 31px;
+          line-height: 31px;
+          text-align: center;
+          color: #fff;
+          background-color: #c20c0c;
+          margin: 30px auto 0;
+          border-radius: 5px;
+        }
+      }
     }
   }
 }
