--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
@@ -38,49 +38,54 @@
     .right {
       display: flex;
 
-      .item {
+      a {
+        display: block;
+        font-size: 14px;
+        color: #464646;
 
-        &:first-child {
-          position: relative;
-          padding-left: 30px;
-          margin-right: 20px;
-
-          &::before {
-            position: absolute;
-            top: 5px;
-            left: 0;
-            content: '';
-            width: 30px;
-            height: 30px;
-            background: url('../assets/top_bar_sprite.png') -30px 0;
-          }
+        &:hover {
+          color: #DD302D;
         }
+      }
 
-        &:last-child {
-          position: relative;
-          padding-right: 30px;
+      .grow {
+        position: relative;
+        padding-left: 30px;
+        margin-right: 20px;
 
-          &::after {
-            position: absolute;
-            top: 5px;
-            right: 0;
-            content: '';
-            width: 30px;
-            height: 30px;
-            background: url('../assets/top_bar_sprite.png') 0 0;
-            opacity: .1;
-            transform: rotate(90deg);
-          }
+        &::before {
+          position: absolute;
+          left: 0;
+          top: 0;
+          bottom: 0;
+          margin: auto 0;
+          content: '';
+          width: 30px;
+          height: 30px;
+          background: url('../assets/top_bar_sprite.png') -30px 0;
         }
-
-        a {
-          display: block;
-          font-size: 14px;
-          color: #464646;
-        }
-
 
       }
+
+      .ranking {
+        position: relative;
+        padding-right: 30px;
+
+        &::after {
+          position: absolute;
+          right: 0;
+          top: 0;
+          bottom: 0;
+          margin: auto 0;
+          content: '';
+          width: 30px;
+          height: 30px;
+          background: url('../assets/top_bar_sprite.png') 0 0;
+          opacity: .1;
+          transform: rotate(90deg);
+        }
+      }
+
     }
 
   }
