--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
@@ -38,8 +38,7 @@
     .right {
       display: flex;
 
-      a {
-        display: block;
+      .grow, .ranking {
         font-size: 14px;
         color: #464646;
 
