--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.css
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.css
@@ -66,7 +66,61 @@
   width: 30px;
   height: 30px;
   background: url('../assets/top_bar_sprite.png') 0 0;
-  opacity: 0.1;
+  opacity: 0.5;
   transform: rotate(90deg);
+}
+.top-nav-container {
+  width: 1120px;
+  margin: 0 auto;
+}
+.top-nav {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.top-nav .top-nav-container {
+  display: flex;
+  justify-content: space-between;
+  height: 84px;
+}
+.top-nav .top-nav-container .left {
+  display: flex;
+}
+.top-nav .top-nav-container .left .logo a {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  display: block;
+  width: 200px;
+  height: 54px;
+  text-indent: -9999px;
+  background: url("../assets/top_nav_logo.png") no-repeat;
+}
+.top-nav .top-nav-container .left .top-nav-links {
+  display: flex;
+}
+.top-nav .top-nav-container .left .top-nav-links .item a {
+  padding-top: 20px;
+  display: block;
+  width: 110px;
+  height: 84px;
+  font-size: 18px;
+  color: #c9c9dd;
+  text-align: center;
+}
+.top-nav .top-nav-container .left .top-nav-links .item a:hover {
+  border-bottom: 2px solid #f3c258;
+  color: #f3c258;
+  background-image: linear-gradient(#0c0b06, #f3c258);
+}
+.top-nav .top-nav-container .left .top-nav-links .item a:hover .desc {
+  color: #f3c258;
+}
+.top-nav .top-nav-container .left .top-nav-links .item a .desc {
+  display: block;
+  padding-top: 4px;
+  font-size: 12px;
+  color: #858792;
+}
+.top-nav .top-nav-container .right {
+  background-color: skyblue;
 }
 /*# sourceMappingURL=index.css.map */
